--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -45,11 +45,11 @@ const coursetags = {
                 
             </ul>
             
-            <span class="navbar-text p-0 d-flex flex-row align-items-center">
+            <span class="navbar-text p-0 d-flex flex-row align-items-center" onclick="toggle_theme();" style="cursor: pointer;">
                 <div class="vr d-none d-sm-block" style="color: white;"></div>
-                    <i class="bi ps-1 pe-2" style="color: white;" id="theme-icon"></i>
-                    <a class="nav-link active text-white py-1 pe-1" onclick="toggle_theme();" style="cursor: pointer;">Toggle theme</a>
-                    <div class="vr d-none d-sm-block" style="color: white;"></div>
+                <i class="bi ps-1 pe-2 m-0" style="color: white;" id="theme-icon"></i>
+                <p class="nav-link active text-white py-1 pe-1 m-0">Toggle theme</p>
+                <div class="vr d-none d-sm-block" style="color: white;"></div>
                 
                 <script is:inline>
                     const theme_icon = document.querySelector("#theme-icon");
