--- a/src/components/Searchbar.astro
+++ b/src/components/Searchbar.astro
@@ -2204,6 +2204,24 @@ import search_contents from "../search.json"
         }
     )
 
+    function compact_course_names(){
+        if (document.querySelector('body').clientWidth <= 768){
+          course_selector.innerHTML = `
+          <option value="all">All courses</option>
+          <option value="sta">Statics</option>
+          <option value="dyn">Dynamics</option>
+          <option value="sol">Sol. Mech.</option>
+          `;
+        }else{
+          course_selector.innerHTML = `
+          <option value="all">All courses</option>
+          <option value="sta">Statics</option>
+          <option value="dyn">Dynamics</option>
+          <option value="sol">Solid Mechanics</option>
+          `;
+        }
+    }
+
     function resize_searchbar(){
       console.log(document.querySelector('body').clientWidth)
       if (document.querySelector('body').clientWidth <= 768){
@@ -2221,7 +2239,6 @@ import search_contents from "../search.json"
 
     function resize_icon(){
       clear_icon.style = `font-size: ${searchbox.clientHeight}px; top: -${searchbox.clientHeight/4-2}px;`;
-      console.log(`${searchbox.clientHeight}px`)
     }
 
     resize_icon();
@@ -2231,6 +2248,7 @@ import search_contents from "../search.json"
         function(){
           resize_searchbar();
           resize_icon();
+          compact_course_names();
         }
     )
 </script>
