--- a/src/components/Searchbar.astro
+++ b/src/components/Searchbar.astro
@@ -2222,6 +2222,8 @@ import search_contents from "../search.json"
         }
     }
 
+    compact_course_names();
+
     function resize_searchbar(){
       console.log(document.querySelector('body').clientWidth)
       if (document.querySelector('body').clientWidth <= 768){
